--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.0"
+    "mongoose": "^8.1.0",
+    "nodemon": "^3.0.3"
   },
   "name": "gymbackend",
   "version": "1.0.0",
